# OOP_labs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile
Laboratory_1/: README.md
Laboratory_1/.devcontainer/: devcontainer.json
Laboratory_1/include/: chocolate.h
Laboratory_1/src/: chocolate.cpp
src/: main.cpp
tests/: CMakeLists.txt  test_chocolate.cpp
Задачи/: README.md
